Fix text in option overflow

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1,117 +1,102 @@
-body, html, div, p, span, a, h1, h2, h3, h4, h5{
-	margin 				: 0;
-	padding 			: 0;
+body, html, div, p, span, a, h1, h2, h3, h4, h5 {
+    margin: 0;
+    padding: 0;
 }
-
-body, html{	
-	width 				: 100%;
+body, html {
+    width: 100%;
 }
-
-body{
-	background 			: url('../images/bgnoise_lg.png') repeat top left;
-	color 				: white;
-	font-family 		: tahoma;
-	font-weight 		: lighter;
-	padding-top 		: 40px;
+body {
+    background: url('../images/bgnoise_lg.png') repeat top left;
+    color: white;
+    font-family: tahoma;
+    font-weight: lighter;
+    padding-top: 40px;
 }
-
-	body p{
-		font-size 		: 14px;
-	}
-	
-		body p a{
-			font-size	: 16px;
-		}
-
+body p {
+    font-size: 14px;
+}
+body p a {
+    font-size: 16px;
+}
 h1 {
-	color 				: #E05E00;	
-	font-style 			: italic;
+    color: #E05E00;
+    font-style: italic;
 }
-
-a{
-	color 				: #E05E00;	
-	text-decoration		: none;
+a {
+    color: #E05E00;
+    text-decoration: none;
 }
-
-a:hover{
-	text-decoration		: underline;
+a:hover {
+    text-decoration: underline;
 }
-
 /* general */
+
 .clear {
-	clear: both;
+    clear: both;
 }
-
-
 /* Header */
-.brand{
-	color 				: #ffffff !important;	
-	font-family 		: georgia;
-	font-style 			: italic;
-}
 
+.brand {
+    color: #ffffff !important;
+    font-family: georgia;
+    font-style: italic;
+}
 /* list stuff */
-#org{
-	background-color 	: #000000;
-	margin 				: 10px;
-	padding 			: 10px;
 
+#org {
+    background-color: #000000;
+    margin: 10px;
+    padding: 10px;
 }
-
-
-
-#show-list{
-	cursor 				: pointer;
+#show-list {
+    cursor: pointer;
 }
-
 /* bootstrap overrides */
-.alert-message{
-	margin: 2px 0;
-}
 
-.topbar{
-	position 			: absolute;
+.alert-message {
+    margin: 2px 0;
 }
-
+.topbar {
+    position: absolute;
+}
 /* Custom chart styling */
-.jOrgChart {
-  margin                : 10px;
-  padding               : 20px;
-}
 
-/* Custom node styling */
-.jOrgChart .node {
-	position: relative;
-	background-image	: url('../images/bgnoise_lg.png'); 
-	font-size 			: 12px;
-	background-color 	: #c6deff;
-	border-radius 		: 8px;
-	border 				: 5px solid black;
-	color 				: #000000;
-	-moz-border-radius 	: 8px;
+.jOrgChart {
+    margin: 10px;
+    padding: 20px;
 }
-	.node p{
-		font-family 	: tahoma;
-		font-size 		: 10px;
-		line-height 	: 11px;
-		padding 		: 2px;
-	}
-.jOrgChart .node.unit{
-	position: relative;
-	font-size 			: 12px;
-	background-color 	: #9FA4BC;
-	border-radius 		: 8px;
-	border 				: 5px double black;
-	color 				: #000000;
-	-moz-border-radius 	: 8px;
-	background-blend-mode: darken;
+/* Custom node styling */
+
+.jOrgChart .node {
+    position: relative;
+    background-image: url('../images/bgnoise_lg.png');
+    font-size: 12px;
+    background-color: #c6deff;
+    border-radius: 8px;
+    border: 5px solid black;
+    color: #000000;
+    -moz-border-radius: 8px;
+}
+.node p {
+    font-family: tahoma;
+    font-size: 10px;
+    line-height: 11px;
+    padding: 2px;
+}
+.jOrgChart .node.unit {
+    position: relative;
+    font-size: 12px;
+    background-color: #9FA4BC;
+    border-radius: 8px;
+    border: 5px double black;
+    color: #000000;
+    -moz-border-radius: 8px;
+    background-blend-mode: darken;
 }
 .hidden {
     display: none;
 }
-
-
-.temp{
+.temp {
     border: dotted 2px #869baf !important;
 }
 .add {
@@ -127,34 +112,36 @@ a:hover{
     background: url(../images/magnify.png) no-repeat 50% 50%;
 }
 .emp {
-	background: url(../images/employee_info.png) no-repeat 50% 50%;;
+    background: url(../images/employee_info.png) no-repeat 50% 50%;
+    ;
 }
-
-.edit, .del, .add, .view{
+.edit, .del, .add, .view {
     display: inline-block;
     width: 16px;
     height: 16px;
     margin-right: 0;
 }
-
-.emp{
-	display: inline-block;
+.emp {
+    display: inline-block;
     width: 16px;
     height: 20px;
     margin-right: 10px;
-/*     margin-left: 0; */
+    /*     margin-left: 0; */
 }
-
-.del, .delete{
+.del, .delete {
     margin-right: 0;
     margin-left: 0;
 }
+.overlay {
+    position: absolute;
+    top: 50%;
+    left: 15%;
+    width: 74px;
+    height: 15px;
+    z-index: 30;
+}
 
-.overlay{
-  position: absolute;
-  top: 50%;
-  left: 15%;
-  width: 74px;
-  height: 15px;
-  z-index: 30;
+/* Keep option text in form in one line*/
+.cform label {
+    white-space: nowrap;
 }
